# ji-cloud

backend/api/: Cargo.toml  Makefile.toml
backend/api/src/: algolia.rs  db.rs  extractor.rs  google_oauth.rs  http.rs  jwk.rs  main.rs  service.rs  token.rs  translate.rs
backend/api/src/algolia/: migration.rs
backend/api/src/db/: media.rs
backend/api/src/http/: cors.rs
backend/api/src/http/endpoints/: admin.rs  course.rs  jig.rs  resource.rs  search.rs  session.rs  user.rs
backend/api/src/http/endpoints/jig/: player.rs  report.rs
backend/api/src/http/endpoints/resource/: report.rs
backend/api/src/http/endpoints/session/: oauth.rs
backend/api/src/service/: event_arc.rs  mail.rs  notifications.rs  s3.rs  storage.rs
backend/api/src/service/upload/: cleaner.rs
backend/api/tests/integration/: animation.rs  category.rs  helpers.rs  service.rs
backend/core/: Cargo.toml
backend/core/src/: google.rs
backend/pages/: Cargo.toml
backend/util/media-refresh/: Cargo.toml
backend/util/s3-key-migrate/: Cargo.toml
build-utils/batch-user-jigs/: Cargo.toml
build-utils/image-upload/: Cargo.toml
frontend/apps/crates/entry/asset/edit/src/: router.rs
frontend/apps/crates/entry/asset/edit/src/edit/: dom.rs  mod.rs  state.rs
frontend/apps/crates/entry/asset/edit/src/gallery/: dom.rs
frontend/apps/crates/utils/src/: asset.rs  routes.rs
frontend/apps/crates/utils/src/editable_asset/: editable_pro_dev.rs  mod.rs
shared/macros/: Cargo.toml
shared/rust/: Cargo.toml
shared/rust/src/domain/pro_dev/: unit.rs
(+18 files in other folders)
