[package]
name = "shared"
version = "0.1.0"
authors = [
    "dakom <david.komer@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>", # chloe@launchbadge.com 
]
edition = "2018"
description = "shared types for ji cloud project"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.65"
base64 = "0.13.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = { version = "0.6.3", features = ["serde"] }
csv = "1.1.6"
http = "0.2.8"
http-serde = "1.1.2"
rgb = { version = "0.8.34", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_repr = "0.1.9"
serde_with = { version = "1.14.0", features = ["json", "macros"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.2.1", features = ["serde"] }
thiserror = "1.0.37"
strum = "0.22.0"
strum_macros = "0.22.0"
macros = { path = "../macros" }

# wasm
wasm-bindgen = { version = "0.2.83", optional = true }
js-sys = { version = "0.3.60", optional = true }

# backend
actix-web = { version = "4.2.1", optional = true }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "json",
    "chrono",
    "offline",
    "migrate",
]
optional = true

[features]
backend = ["sqlx", "actix-web"]
wasm = ["wasm-bindgen", "js-sys"]
